<resources>
    <string name="app_name">Love Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="_100_percent">100%</string>
    <string name="try_again">Try Again</string>
    <string name="time_of_creation">Время создания записи</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_to_delete_this">Вы уверены что хотите удалить эту запись?</string>
    <string name="and">" and "</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>