<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/bg_outer_container">

        <ImageView
            android:id="@+id/img_result"
            android:layout_width="378dp"
            android:layout_height="260dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/img_spiderman_kitty_kiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="24dp"
            android:background="@color/blue_grey"
            app:layout_constraintBottom_toBottomOf="@+id/img_result"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_result" />

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:src="@drawable/img_heart_pixel"
            app:layout_constraintEnd_toEndOf="@id/tv_firstname"
            app:layout_constraintStart_toStartOf="@id/tv_firstname"
            app:layout_constraintTop_toBottomOf="@id/tv_firstname" />

        <TextView
            android:id="@+id/tv_secondname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/second_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_heart" />

        <ImageView
            android:id="@+id/img_heart2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/img_heart2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_secondname" />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_percent"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_heart2"
            app:layout_constraintEnd_toEndOf="@id/img_heart2"
            app:layout_constraintStart_toStartOf="@id/img_heart2"
            app:layout_constraintTop_toTopOf="@id/img_heart2" />

        <TextView
            android:id="@+id/tv_wishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_heart2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            tools:text="Okekekekeke"
            android:gravity="center"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/try_again"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/tv_wishes"
            app:layout_constraintStart_toStartOf="@id/tv_wishes"
            app:layout_constraintTop_toBottomOf="@id/tv_wishes" />

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/img_spiderman_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_diagram"
                app:tint="@color/dark_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>