<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculate.CalculateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/bg_outer_container">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/img_spiderman_kitty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="48dp"
            android:background="@color/blue_grey"
            app:layout_constraintBottom_toBottomOf="@id/img_main"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <androidx.cardview.widget.CardView
            android:id="@+id/container_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="@color/light_grey"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_firstname">

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@null"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_secondname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/second_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_firstname" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_secondname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="@color/light_grey"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_secondname">

            <EditText
                android:id="@+id/et_secondname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:padding="12dp"
            android:text="@string/calculate"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_secondname" />

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/img_spiderman_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_history"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_diagram"
                app:tint="@color/dark_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>